updated styles for new section, corrected a few spacing issues

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -29,11 +29,22 @@ html *{
 #appearances1,
 #appearances2,
 #books,
-
 #contact {
   margin-top: 4rem;
-  padding-top: 4rem;
 }
+
+
+.comingSoonImg{
+  padding-bottom: 2rem;
+  max-width: 50%;
+  margin: auto;
+}
+
+.comingSoon-text {
+  font-size: 1.5rem;
+}
+
+
 
 .card-body {
   display: grid;
@@ -170,7 +181,7 @@ html *{
   margin-bottom: 4rem;
 }
 
-.blog-headline{
+.comingSoon-headline, .blog-headline{
   margin-bottom: 2rem;
 }
 
